Istio/VirtualService-All.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: carts
  namespace: sock-shop
spec:
  hosts:
  - carts
  http:
  - route:
    - destination:
        host: carts
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: carts-db
  namespace: sock-shop
spec:
  hosts:
  - carts-db
  http:
  - route:
    - destination:
        host: carts-db
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: catalogue
  namespace: sock-shop
spec:
  hosts:
  - catalogue
  http:
  - route:
    - destination:
        host: catalogue
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: catalogue-db
  namespace: sock-shop
spec:
  hosts:
  - catalogue-db
  http:
  - route:
    - destination:
        host: catalogue-db
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: front-end
  namespace: sock-shop
spec:
  hosts:
  - front-end.sock-shop.svc.cluster.local
  gateways:
  - mesh
  http:
  - route:
    - destination:
        host: front-end.sock-shop.svc.cluster.local
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: orders
  namespace: sock-shop
spec:
  hosts:
  - orders
  http:
  - route:
    - destination:
        host: catalogue-db
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: orders-db
  namespace: sock-shop
spec:
  hosts:
  - orders-db
  http:
  - route:
    - destination:
        host: orders-db
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: payment
  namespace: sock-shop
spec:
  hosts:
  - payment
  http:
  - route:
    - destination:
        host: payment
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: queue-master
  namespace: sock-shop
spec:
  hosts:
  - queue-master
  http:
  - route:
    - destination:
        host: queue-master
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rabbitmq
  namespace: sock-shop
spec:
  hosts:
  - rabbitmq
  http:
  - route:
    - destination:
        host: rabbitmq
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: shipping
  namespace: sock-shop
spec:
  hosts:
  - shipping
  http:
  - route:
    - destination:
        host: shipping
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: user
  namespace: sock-shop
spec:
  hosts:
  - user
  http:
  - route:
    - destination:
        host: user
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: user-db
  namespace: sock-shop
spec:
  hosts:
  - user-db
  http:
  - route:
    - destination:
        host: user-db
        subset: v1
